# bird_clef_2026

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
config/: global.yml
config/experiment_all_aug/: augs.yml  experiment.yml
config/experiment_both_aug/: augs.yml  experiment.yml
config/experiment_mel_aug/: augs.yml  experiment.yml
config/experiment_no_aug/: experiment.yml
config/experiment_wave_aug/: augs.yml  experiment.yml
scripts/: benchmark_h5_vs_wav.py  wav_to_h5.py
src/config/: augs.yml  data.yml  training.yml
src/data_module/: dataset.py  spectrogram_augmentations.py  wave_augmentations.py  wave_features_extractor.py
src/evaluating/: baseline_inference.py
src/losses/: focal.py
src/models/: model_baseline.py  vit.py
src/optimazing/: onnx_worker.py
src/training/: run_training.py  run_training_all_aug.py  run_training_both_aug.py  run_training_mel_aug.py  run_training_no_aug.py  run_training_wave_aug.py
src/utils/: config_loader.py  pandas_transformations.py  run_h5_caching.py  run_mel_caching.py
